# radpro-gc-01

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: arm-none-eabi.cmake
platform.io/: platformio.ini
platform.io/lib/mcu-renderer/: mcu-renderer.h
platform.io/src/: display.c  events.c  events.h  init.c  power.c  power.h  settings.h  system.h
platform.io/src/peripherals/: display.c
platform.io/src/stm32/: gc01.c  gc01.h  stm32_adc.c  stm32_display.c  stm32_power.c
platform.io/src/strings/: en.h
platform.io/src/system/: events.c  events.h  power.c  settings.h  system.h
platform.io/src/system/strings/: bg.h  en.h
platform.io/src/ui/: draw.c  draw.h  menu.c  system.c
platform.io/src/ui/fonts/gc-01/: font_small_bg_color_22_1bpp.h  font_small_bg_color_23_1bpp.h  font_small_bg_color_25_1bpp.h  font_small_cs_color_22_1bpp.h  font_small_cs_color_23_1bpp.h  font_small_cs_color_25_1bpp.h  font_small_da_color_22_1bpp.h  font_small_da_color_23_1bpp.h  font_small_da_color_25_1bpp.h  font_small_de_color_22_1bpp.h  font_small_de_color_23_1bpp.h  font_small_de_color_25_1bpp.h  font_small_el_color_22_1bpp.h  font_small_el_color_23_1bpp.h  font_small_el_color_25_1bpp.h  font_small_en_color_22_2bpp.h  font_small_en_color_23_2bpp.h  font_small_en_color_25_2bpp.h  font_small_es_color_22_1bpp.h  font_small_es_color_23_1bpp.h  font_small_es_color_25_1bpp.h  font_small_fi_color_22_1bpp.h  font_small_fi_color_23_1bpp.h  font_small_fi_color_25_1bpp.h  font_small_fr_color_22_1bpp.h  font_small_fr_color_23_1bpp.h  font_small_fr_color_25_1bpp.h  font_small_hr_color_22_1bpp.h  font_small_hr_color_23_1bpp.h  font_small_hr_color_25_1bpp.h  font_small_hu_color_22_1bpp.h  font_small_hu_color_23_1bpp.h  font_small_hu_color_25_1bpp.h  font_small_id_color_22_1bpp.h  font_small_id_color_23_1bpp.h  font_small_id_color_25_1bpp.h  font_small_it_color_22_1bpp.h  font_small_it_color_23_1bpp.h  font_small_it_color_25_1bpp.h  font_small_lt_color_22_1bpp.h  (+68 more)
tests/: create_color_array.py  new_color_array.txt
tools/: build-fonts-gc01.py  convert_colors.py  radpro-sign.py
